@@ -162,7 +162,6 @@ importFrom(beachmat,realizeFileBackedMatrix)
 importFrom(beachmat,rowBlockApply)
 importFrom(ggbeeswarm,geom_quasirandom)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,element_blank)
